<resources>
    <string name="app_name">Swoosh</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_dominate_the_league">Find a team in your city dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="next">NEXT</string>
    <string name="background_image">background image</string>
    <string name="logo_image">logo image</string>
    <string name="select_skill_level">SELECT SKILL LEVEL</string>
    <string name="beginner">BEGINNER</string>
    <string name="professional">PROFESSIONAL</string>
    <string name="tool_search">Searching beginner mens league near you...</string>
    <string name="select_league">SELECT LEAGUE</string>
    <string name="mens">MENS</string>
    <string name="womens">WOMENS</string>
    <string name="co_ed">CO-ED</string>
</resources>
